--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ h6{
 html,
 body{
     
-  /*   height: 100%; */
+    height: 100%;
     line-height: 1;
 }
 body{
@@ -53,12 +53,13 @@ body{
 .wrapper.container-fluid{
     position: relative;
     overflow: hidden;
+    height: auto;
    width: 100%;
     top: 0;
     left: 0;
     margin: 0 ;
     padding: 0;
-    background-color:rgba(0, 0, 0, 0.7);         
+    background-color:rgba(0, 0, 0, 0.3);         
     color:rgba(255,255,255, 1);
     font-family: 'Lato', sans-serif;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
 }
@@ -69,6 +70,69 @@ body{
     margin: 0 auto;
  }
 
+ .divider{
+    display: block;
+    height: 50px;
+    padding: 0;
+    width: 100%;
+    background-color: rgba(255,255,255, 0.3);
+    margin: 10px;
+}
+.slide__left{
+    transform: translateX(-400vw);
+}
+.slide__right{
+    transform: translateX(400vw);
+}
+ /*______________________________________________*/
+
+/* section */
+/*______________________________________________*/
+
+.section{
+    position: relative;
+    overflow: hidden;
+    z-index: 100;
+  transform: translate(400%,-20%);
+  background-color: rgba(255,255,255,0.8);
+  transition: transform 1s ease-in-out;
+  margin: 20px auto ;
+  opacity: 0;
+  }
+  
+  .section:nth-of-type(2n) {
+    background-color: rgba(0,0,0,0.3);
+  transform: translate(-400%,-20%);
+  }
+  
+  .section:nth-of-type(3n) {
+    background-color: rgba(255,255,255,0.4);
+  }
+
+  .section.shown{
+  transform: translate(0%,0%);
+  opacity: 1;
+}
+
+  .section__title{
+    font-family: 'Wendy One', sans-serif;    
+    font-size: 1.2em;
+    text-align: center;
+    max-width: 80%;
+    padding:15px;
+    margin:0px auto 50px auto;
+    font-weight: 100;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    text-shadow:0px 0px 1px rgba(255,255,255,1);
+    background-color: rgba(255,255,255,0.1);
+    box-shadow:0px 0px 7px rgba(255, 255, 255,1);
+    color:rgba(255,255,255,1);
+    border:4px solid rgba(255,255,255,0.5);
+    border-radius:200px/200px;
+    /* border-top:4px solid rgba(255,255,255,0.5); */
+}
+
 
 /*______________________________________________*/
 
@@ -78,7 +142,7 @@ body{
 .header.row{
     position: fixed;
     overflow: hidden;
-    height: 70px;
+    height: 60px;
     top: 0;
     left: 0;
     width: 100%;
@@ -87,7 +151,8 @@ body{
     transition: transform 0.7s ease-in-out;
     padding: 0;
     margin: 0 auto;
-    border-bottom: 2px solid rgba(0,0,0,0.5);
+    border-bottom: 2px solid rgba(0,0,0,0.7);
+    box-shadow:0px 1px 2px rgba(255, 255, 255,1);
 }
 
 
@@ -100,7 +165,8 @@ rgba(38, 60, 116, 1) */
     transform: translateY(-400px);
   }
 .header__half{
-    height: auto;
+    height: 60px;
+    padding: 5px;
 display: flex;
   justify-content:space-between;
   align-items:center;
@@ -144,8 +210,8 @@ display: flex;
     text-align: center;
     text-transform: uppercase;
     text-decoration: none;
-    letter-spacing: 2px;
-    padding: 7px;
+    letter-spacing: 4px;
+    padding: 12px;
 }
 .title {
     width:  100%;
@@ -156,31 +222,40 @@ display: flex;
 .header__subtitle {
     width:  100%;
     font-size: 0.7em;
+    font-weight: 900;
     color:rgba(255, 255, 255, 1);
 }
 
-.header__tel{
+/* .header__tel{
     display: flex;
+    justify-content: center;
     align-items:center;
  flex-direction: column;
- padding: 7px;
- letter-spacing: 2px;
-    font-size: 0.8em;
+ padding: 2px;
+
 }
-.header__tel p{
+.header__tel {
     color:rgba(255, 255, 255, 1);
-}
+    font-size: 0.7rem;
+    font-weight: 900;
+    letter-spacing: 1px;
+} */
 
 .phone__number{
-    
+    margin: 0;
+    padding: 0px;
+    letter-spacing: 2px;
+    font-size: 0.6em;
+    font-weight: 500;
     display: flex;
+    flex-direction: column;
     align-items:center;
     text-decoration: none;
     color:rgba(255, 255, 255, 1);
 }
 
 .phone__number svg{
-    margin-right: 5px;
+   /*  margin-right: 10px; */
 }
 
 .header__socials{
@@ -210,8 +285,8 @@ display: flex;
     justify-content: center;
 }
 .nav__btn{
-    /* display: none; */
-    position: relative;
+    display: none;
+    position: absolute;
     width: 50px;
     height: 50px;
     cursor: pointer;
@@ -279,29 +354,31 @@ display: flex;
 .nav__menu {
     display: flex;
     align-items:center;
-    flex-wrap: wrap;
-    text-align: center;
-    padding: 0;
+   /*  flex-wrap: wrap; */
     margin: 0 auto;
     transform: translate(0px,0px);
     transition: all 0.2s ease-in-out;
 }
 .nav__menu__item {
     text-transform: uppercase;
-    padding: 5px;
-/*     background-color:rgba(0,0,0,0.3);
- */}
+    padding: 4px;
+    text-align: center;
+}
 .nav__menu__link {
-    font-size: 0.7em;
+    font-size: 0.8em;
     text-decoration: none;
+    letter-spacing: 1px;
     color:rgba(255,255,255,1);
-  /*   font-family: 'Wendy One', sans-serif;  */
-   /*  margin: 7px; */
+    font-weight: 100;
 }
 .nav__menu__link.active {
-   /*  font-family: 'Loto'; */
     color:rgba(231, 220, 74, 1);
-    font-weight: 700;
+    letter-spacing: 2px;
+    font-weight: 900;
+    font-size: 0.9em;
+    text-shadow: 1px 1px 1px rgba(255, 255, 255, 1);
+/*     box-shadow: 0 0 1vh rgba(0, 0, 0, 0.1);
+ */
 }
 
 
@@ -315,10 +392,12 @@ display: flex;
 .main.row{
     position: relative;
     overflow: hidden;
-   /*  max-width: 1720px; */
+    max-width: 1720px;
    width: 100%;
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
+    height:auto;
+    padding-top: 60px;
 }
 
 .main__content{
@@ -336,8 +415,10 @@ display: flex;
     row-gap: 30px;
     margin: 0 ;
     padding: 0;
+    padding-top: 90px;
     text-align: center;
     height: 80vh;
+    width: 100%;
 }
 .find__travel{
      width: 100%;
@@ -348,17 +429,19 @@ display: flex;
 .find__travel__title span{
    display: inline-flex;
     font-size: 1em;
-    letter-spacing: 7px;
+    letter-spacing: 5px;
     text-shadow: 3px 0 3px rgba(38, 60, 116, 1);
+    padding:5px;
 }
 
 
 .find__travel__title {
    display: inline-flex;
    text-align: center;
-   margin-top: 120px;
     font-size: 1em;
-     letter-spacing: 7px; 
+     letter-spacing: 3px; 
+     padding:7px;
+
     text-transform: uppercase;
     font-weight: 900;
     text-shadow: 3px 0 3px rgba(0,0,0,1);
@@ -368,68 +451,65 @@ display: flex;
     max-width: 80%;
     font-size: 1em;
     text-shadow: 3px 0 3px rgba(0,0,0,1);
-     letter-spacing: 7px; 
+     letter-spacing: 5px; 
     text-transform: uppercase;
-    padding:0px;
+    padding:5px;
     font-weight: 900;
 }
-/* .find__travel .btn {
-    max-width:500px ;
-    font-size: 1.5em;
-    font-weight: 700;
-    text-transform: uppercase;
-    font-style: italic;
-    text-shadow: 0 0 2px rgba(0, 0, 0, 1);
-    letter-spacing: 2px;
-    margin: 10px auto;
-    color:rgba(231, 220, 74, 1);
-    border:5px solid rgba(231, 220, 74, 1);
-    border-radius: 15px/15px;
-    box-shadow:0 0 10px rgba(0,0,0,0.5);
-} */
+
+.find__travel .divider{
+    display: flex;
+    justify-content: center;
+    align-items:center;
+}
+
 
 .accent__title {
-    display: inline;
-    margin: 0 auto;
+   width: 30vw;
+    margin: 0 auto 10px auto;
+    display: flex;
+    justify-content: space-around;
+    background-color:rgba(0, 0, 0, 0.3);
+    align-items:center;
 }
 
 .second__word,
 .first__word {
    /*  font-size: 0.5em; */
     display: flex;
-    justify-content: space-between;
+    
     align-items:center;
+    padding: 10px;
+    margin: 0 auto;
 }
 
 .first__word{
-    margin-right: 3%;
+    margin-right: 10px;
 }
 
-
 .second__word{
-    margin-left: 3%;
+    margin-left: 10px;
 }
 
 .symbol__item { 
     font-family: 'Wendy One', sans-serif;    
+    color:rgba(255, 255, 255,1);
     position: relative;
-    font-size: 5em;
+    font-size: 3em;
     font-weight: 100;
-    display: flex;
-    justify-content: center;
-    align-items:center;
     text-align: center;
-    text-shadow: 3px 0 3px rgba(0,0,0,1);
-    margin: 5px;
+    padding: 7px ;
+    text-shadow: -3px 3px 7px rgba(0,0,0,0.7);
+    margin: 0px auto;
     transform:translateX(0) ;
     transition: all 1s ease-in-out;
 }
 
-.slide__left{
-    transform: translateX(-400vw);
-}
-.slide__right{
-    transform: translateX(400vw);
+
+
+
+.find__travel__btn{
+   padding:  50px 0px 0px 0px;
 }
 /*______________________________________________*/
 
@@ -438,13 +518,13 @@ display: flex;
 
 
 .achievments.container-fluid {
-    margin:30px 0;
-
+    margin: 0;
+    padding: 30px ;
 }
 .achievments__list{
     justify-content: space-between;
    text-align: center;
-   padding:40px  20px;
+   padding:30px;
    background-color:rgba(0,0,0,0.5);
 }
 .achievments__list__title {
@@ -455,22 +535,44 @@ display: flex;
     border:1px solid rgba(0,0,0,0.2);
     border-radius:10px/10px;
     text-align: center;
-    box-shadow:0 0 1px rgba(0,0,0,1);
+    box-shadow:0px 1px 1px rgba(0,0,0,1);
    display: flex;
    flex-wrap: wrap;
    margin: 0 auto;
-   padding: 20px 10px 50px 10px;
+   padding: 25px 25px 50px 25px;
 }
 
 .achievment:nth-of-type(2){
-    background-color:rgba(231, 220, 74, 0.5);
+    background-color:rgba(188, 212, 211, 1);
+}
+.achievment:nth-of-type(2) .achievment__image{
+    border:7px dashed rgba(231, 220, 74, 1);
+    border-radius :50%;
+    padding: 5px;
+    width: 67px;
+    height: 67px;
+    transition: all 2s;
 }
 
+.sun__rotate{
+    animation: sun__rotate 10s linear infinite forwards ease-in-out;
+}
+
+@keyframes sun__rotate{
+    0%{
+        /* border:7px dashed rgba(231, 220, 74, 1); */
+        transform: rotate(0deg) scale(1);
+    }
+    50%{
+        /* border:17px dashed rgba(231, 220, 74, 1); */
+        transform: rotate(180deg) scale(1);
+    }
+}
 .achievment:nth-of-type(3){
-    background-color:rgba(161, 190, 151, 1);
+    background-color:rgba(231, 220, 74, 0.5);
 }
 .achievment:nth-of-type(4){
-    background-color:rgba(188, 212, 211, 1);
+    background-color:rgba(161, 190, 151, 1);
 }
 /* rgba(158, 144, 86, 1)
 rgba(188, 212, 211, 1)
@@ -480,7 +582,15 @@ rgba(38, 60, 116, 1) */
 
 .achievment__name {
     flex: 0 0 100%;
+    font-weight: 600;
+    letter-spacing: 2px;
+    text-align: center;
     text-transform:capitalize;
+    color:rgba(255, 255, 255, 1);
+}
+
+.achievment__name strong{
+    color:rgba(0, 0, 0, 1);
 }
 
 .achievment__image {
@@ -493,35 +603,20 @@ rgba(38, 60, 116, 1) */
 }
 
 
-
-/* Travel__ways */
-.travel__ways.container-fluid {
-    margin:50px 0;
-    padding: 0;
-}
-.travel__ways__list {
-}
-.row {
-}
-.travel__way__item {
-}
-.travel__way__title {
-}
-
-
 /* Booking__steps */
 
 
 .booking__steps.container-fluid {
     margin:50px 0;
     padding: 0;
-  
+    box-shadow:0 0 5px rgba(255,255,255,0.5);
+    background-color:rgba(188, 212, 211, 1);
+
 }
 
 .booking__steps__list {
    text-align: center;
    padding: 30px;
-   box-shadow:0 0 5px rgba(255,255,255,1);
 }
 
 .booking__step__list__title {
@@ -531,8 +626,10 @@ rgba(38, 60, 116, 1) */
 .booking__step {
     border:1px solid rgba(0,0,0,0.2);
      min-height: 350px;
-     background-color:rgba(188, 212, 211, 1);
-}
+     box-shadow:0px 3px 7px rgba(0, 0, 0, 1);
+
+/*      background-color:rgba(188, 212, 211, 1);
+ */}
 
 .booking__step__title {
     margin: 30px 0;
@@ -549,19 +646,107 @@ letter-spacing: 2px;
     padding: 30px; 
 }
 .find__travel .btn,
-.booking__consult__link .btn {
+.booking__consult__link .btn,
+.btn {
     font-size: 1em;
     font-weight: 800;
     letter-spacing: 4px;
     padding: 10px 15px;
     text-transform: uppercase;
-    background-color:rgba(0, 0, 0, 0.1);
-    border:3px solid rgba(231, 220, 74, 1);
-    border-radius: 15px/15px;
+    background-color:rgba(0, 0, 0, 1);
+    border:5px solid rgba(231, 220, 74, 1);
+    border-radius: 20px/20px;
     text-shadow: 0 0 2px rgba(255, 255, 255, 1);
-    box-shadow:0 0 5px rgba(255,255,255,0.5)
-    inset 0 0 15px rgba(0, 0, 0, 1);
+    box-shadow:0 0 5px rgba(255,255,255,0.5);
     color:rgba(231, 220, 74, 1);
+}
+
+/* Travel__ways */
+.travel__ways.container-fluid {
+    position: relative;
+    margin:100px 0;
+    padding: 0;
+    /* border:5px solid rgba(0,0,0,0.5); */
+    box-shadow:0px 2px 5px rgba(0, 0, 0, 1);
+    background-color:rgba(0,0,0,0.6);
+
+
+}
+
+.travel__ways__list__title{
+    background-color:rgba(0, 0, 0, 0.4);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
+    box-shadow:0px 1px 10px rgba(0, 0, 0, 1);
+
+    font-size: 2.2em;
+    letter-spacing: 10px;
+    width: 30vw;
+    font-weight: 900;
+    margin: 100px auto;
+}
+.travel__ways__list {
+    width: auto;
+    padding: 30px 0px;
+
+
+}
+.travel__ways__list  .bg{
+    position: absolute;
+    z-index: 10;
+    width: 100%;
+    top: 100px;
+    left: 0;
+    height: 60vh;
+    margin: 15vh auto;
+    background-color:rgba(0,0,0,0.5);
+}
+.travel__ways__list .travel__way__item {
+    color:rgba(0, 0, 0, 1); 
+    position: relative;
+    padding: 20px;
+    padding-bottom: 100px;
+    z-index: 50000;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    background-color:rgba(255,255,255,0.9);
+    box-shadow:0px 1px 1px rgba(0, 0, 0, 1);
+    top:-50px;
+}
+.travel__way__item .descr__text{
+    padding: 15px;
+    letter-spacing: 1px;
+    font-weight: 700;
+    background-color:rgba(188, 212, 211, 0.3);
+}
+
+.travel__way__link {
+    color:rgba(231, 220, 74, 1);
+    position: absolute;
+    bottom: 45px;
+    padding: 10px;
+    text-decoration: none;
+    letter-spacing: 2px;
+    font-weight: 700;
+    /* text-transform: uppercase; */
+    font-size: 1em;
+    background-color:rgba(0,0,0,0.4);
+    box-shadow:1px 2px 7px rgba(0, 0, 0, 1);
+    border-radius:10px;
+}
+
+.travel__ways__image{
+  width: 500px;
+  height: 300px;  
+}
+
+.travel__ways .section__title{
+    color:rgba(231, 220, 74, 1);
+    text-shadow: 1px 0px 1px rgba(0, 0, 0, 1);
+    background-color:rgba(0,0,0,0.3);
+    box-shadow:0px 3px 7px rgba(0, 0, 0, 1);
+    margin-bottom: 30px;
+    border:none;
 }
 
 /*______________________________________________*/
@@ -570,62 +755,12 @@ letter-spacing: 2px;
 /*______________________________________________*/
 
 .tour__card.container-fluid{
-    margin:50px 0;
-    padding:50px 0;
+    margin:0px 0;
+    padding:0;
     box-shadow:0 0 10px rgba(0,0,0,0.5);
 
 }
 
-/*______________________________________________*/
-
-/* section */
-/*______________________________________________*/
-
-.section{
-    position: relative;
-    overflow: hidden;
-    z-index: 100;
-  transform: translate(400%,-20%);
-  background-color: rgba(255,255,255,0.1);
-  transition: transform 1s ease-in-out;
-  margin: 20px auto ;
-  opacity: 0;
-  }
-  
-  .section:nth-of-type(2n) {
-    background-color: rgba(255,255,255,0.3);
-  transform: translate(-400%,-20%);
-  }
-  
-  .section:nth-of-type(3n) {
-    background-color: rgba(0,0,0,0.1);
-  }
-
-  .section.shown{
-  transform: translate(0%,0%);
-  opacity: 1;
-
-}
-
-  .section__title{
-    font-family: 'Wendy One', sans-serif;    
-
-    font-size: 1.5em;
-    text-align: center;
-    max-width: 90%;
-    padding:15px 5px;
-    margin:0px auto 50px auto;
-    font-weight: 100;
-    letter-spacing: 5px;
-    text-transform: uppercase;
-   /*  font-style: italic; */
-    text-shadow:0px 0px 1px rgba(255,255,255,1);
-    background-color: rgba(255,255,255,0.2);
-    color:rgba(255,255,255,1);
-    border-bottom:2px solid rgba(0,0,0,1);
-    /* border-top:1px solid rgba(0,0,0,1); */
-
-}
 
 /*________________________________________________*/
   
@@ -661,7 +796,7 @@ letter-spacing: 5px;}
     align-items:center;
     flex-wrap: wrap;
     flex-direction: row;
-    margin: 100px 20% 0 20%;
+    margin: 0px 20%;
     max-width: 60%;
 }
 .route__point__title {
@@ -1064,7 +1199,7 @@ width: 270px;
     bottom: 0;
     overflow: hidden;
     margin: 0 auto;
-    background-color:rgba(255,255,255,0.5);
+    background-color:rgba(0,0,0,0.7);
     padding: 20px;
 }
 
@@ -1124,11 +1259,13 @@ width: 270px;
 
 .modal__login {
     position: fixed;
-    right: 0px;
-    bottom:0px;
+    right: 10px;
+    bottom:10px;
     transition: all 0.3s;
     z-index: 3000;
-
+    background-color: rgba(161, 190, 151, 0.2);
+    padding: 17px;
+    box-shadow:1px 1px 3px rgba(255, 255, 255, 1);
 }
 .modal__content{
     display: flex;
@@ -1136,8 +1273,7 @@ width: 270px;
     flex-direction: column;
     justify-content:center;
     text-align: center;
-    padding: 10px;
-    background-color: rgba(0, 0, 0, 0.4);
+    padding: 20px;
     height: auto;
     /* width: 450px; */
     border:1px solid rgba(0,0,0,0.2);
@@ -1150,6 +1286,10 @@ width: 270px;
      font-family: 'Wendy One', sans-serif;  
      font-weight: 100;
      letter-spacing: 1px;  
+     background-color: rgba(255, 255, 255, 0.2);
+     padding: 5px;
+     text-shadow: 0px 1px 1px rgba(0, 0, 0, 1);
+
 }
 
 .modal__login p{
@@ -1158,18 +1298,24 @@ width: 270px;
     color:rgba(255, 255, 255, 1);
     letter-spacing: 2px;
     font-weight: 700;
+    background-color: rgba(0, 0, 0, 0.3);
+    padding: 5px;
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 1);
+
 }
 
 input[type="email"]/* ,
 input[type="password"] */ {
         border:1px solid rgba(0,0,0,0.2);
         flex:1 1 auto;
-        height: 15px;
+        height: 24px;
         max-width: 200px;
         font-size: 0.8em;
         font-weight: 700;
-        padding: 2px;
-        margin: 3px auto;
+        padding: 5px;
+        margin: 0px auto;
+        background-color: rgba(255, 255, 255, 0.9);
+        text-shadow: 0px 1px 1px rgba(0, 0, 0, 1);
     }
 input[type="submit"] {
     border:3px solid rgba(231, 220, 74, 1);
@@ -1181,19 +1327,21 @@ input[type="submit"] {
     text-transform: uppercase;
     letter-spacing: 2px;
     border-radius:15px/15px;
-    font-size: 1em;
-    margin: 5px auto;
+    font-size: 0.8em;
+    margin: 0px auto;
     vertical-align: middle;
 }
 
 .modal__close{
     position: absolute;
-    top:10px;
-    right:10px;
+    top:0px;
+    right:0px;
     padding:2px 6px;
-    font-size: 0.5em;
+    font-size: 0.6em;
     border-radius: 50%;
     border:3px solid rgba(231, 220, 74, 1);
+    text-shadow: 0px 1px 1px rgba(255, 255, 255, 1);
+background-color:rgba(0,0,0,0.3);
     color:rgba(231, 220, 74, 1);
     text-decoration: none;
     font-weight: 900;
