--- a/css/style.css
+++ b/css/style.css
@@ -118,19 +118,19 @@ body{
     font-family: 'Wendy One', sans-serif;    
     font-size: 1.2em;
     text-align: center;
-    max-width: 80%;
+    max-width: 50%;
     padding:15px;
-    margin:0px auto 50px auto;
+    margin:20px auto;
     font-weight: 100;
     letter-spacing: 5px;
     text-transform: uppercase;
-    text-shadow:0px 0px 1px rgba(255,255,255,1);
+    text-shadow:1px 1px 2px rgba(0,0,0,1);
     background-color: rgba(255,255,255,0.1);
-    box-shadow:0px 0px 7px rgba(255, 255, 255,1);
-    color:rgba(255,255,255,1);
-    border:4px solid rgba(255,255,255,0.5);
-    border-radius:200px/200px;
-    /* border-top:4px solid rgba(255,255,255,0.5); */
+/*     box-shadow:0px 0px 10px rgba(255, 255, 255,1);
+    color:rgba(255,255,255,1); */
+    border-bottom:4px solid rgba(255,255,255,0.5);
+   
+    border-top:4px solid rgba(255,255,255,0.5);
 }
 
 
@@ -392,13 +392,13 @@ display: flex;
 .main.row{
     position: relative;
     overflow: hidden;
-    max-width: 1720px;
-   width: 100%;
+/*     max-width: 1720px;
+ */   width: 100%;
     margin: 0;
     padding: 0;
     height:auto;
-    padding-top: 60px;
-}
+/*     padding-top: 60px;
+ */}
 
 .main__content{
     width: 100%;
@@ -610,7 +610,7 @@ rgba(38, 60, 116, 1) */
     margin:50px 0;
     padding: 0;
     box-shadow:0 0 5px rgba(255,255,255,0.5);
-    background-color:rgba(188, 212, 211, 1);
+    background-color:rgba(161, 190, 151, 1);
 
 }
 
@@ -676,8 +676,8 @@ letter-spacing: 2px;
 .travel__ways__list__title{
     background-color:rgba(0, 0, 0, 0.4);
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
-    box-shadow:0px 1px 10px rgba(0, 0, 0, 1);
-
+    box-shadow:0px 1px 10px rgba(255, 255, 255, 1);
+padding: 2px;
     font-size: 2.2em;
     letter-spacing: 10px;
     width: 30vw;
@@ -686,7 +686,7 @@ letter-spacing: 2px;
 }
 .travel__ways__list {
     width: auto;
-    padding: 30px 0px;
+    padding: 20px;
 
 
 }
@@ -703,7 +703,7 @@ letter-spacing: 2px;
 .travel__ways__list .travel__way__item {
     color:rgba(0, 0, 0, 1); 
     position: relative;
-    padding: 20px;
+    padding: 10px;
     padding-bottom: 100px;
     z-index: 50000;
     display: flex;
