--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ body{
 body{
   font-size: 8px;
   width: 100%;
+  background-color:rgba(0, 0, 0, 0.6);
 }
 
 
@@ -54,12 +55,12 @@ body{
     position: relative;
     overflow: hidden;
     height: auto;
-   width: 100%;
+   max-width: 1820px;
     top: 0;
     left: 0;
-    margin: 0 ;
+    margin: 0 auto;
     padding: 0;
-    background-color:rgba(0, 0, 0, 0.3);         
+    background-color:rgba(0, 0, 0, 0.6);         
     color:rgba(255,255,255, 1);
     font-family: 'Lato', sans-serif;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
 }
@@ -78,12 +79,7 @@ body{
     background-color: rgba(255,255,255, 0.3);
     margin: 10px;
 }
-.slide__left{
-    transform: translateX(-400vw);
-}
-.slide__right{
-    transform: translateX(400vw);
-}
+
  /*______________________________________________*/
 
 /* section */
@@ -119,18 +115,15 @@ body{
     font-size: 1.2em;
     text-align: center;
     max-width: 50%;
-    padding:15px;
-    margin:20px auto;
+    padding:10px;
+    margin:10px 25% 20px 25%;
     font-weight: 100;
     letter-spacing: 5px;
     text-transform: uppercase;
     text-shadow:1px 1px 2px rgba(0,0,0,1);
     background-color: rgba(255,255,255,0.1);
-/*     box-shadow:0px 0px 10px rgba(255, 255, 255,1);
-    color:rgba(255,255,255,1); */
-    border-bottom:4px solid rgba(255,255,255,0.5);
-   
-    border-top:4px solid rgba(255,255,255,0.5);
+   /*  border-bottom:4px solid rgba(255,255,255,0.5);
+    border-top:4px solid rgba(255,255,255,0.5); */
 }
 
 
@@ -477,7 +470,7 @@ display: flex;
 .first__word {
    /*  font-size: 0.5em; */
     display: flex;
-    
+    text-decoration: none;
     align-items:center;
     padding: 10px;
     margin: 0 auto;
@@ -505,7 +498,25 @@ display: flex;
     transition: all 1s ease-in-out;
 }
 
+.symbol__shadow{
+    animation: symbol__shadow 5s linear  infinite both ease-in-out;
+}
 
+@keyframes symbol__shadow{
+    0%{
+        text-shadow: -3px 3px 7px rgba(0,0,0,0.7);
+    }
+    50%{
+        text-shadow: 3px -3px 7px rgba(0,0,0,0.7);
+    }
+}
+
+.slide__left{
+    transform: translateX(-400vw);
+}
+.slide__right{
+    transform: translateX(400vw);
+}
 
 
 .find__travel__btn{
@@ -923,7 +934,7 @@ letter-spacing: 5px;}
 .descr__image{
     flex: 0 0 50%;
     width: 50%;
-    height: auto;
+    max-height: 40vh;
     border:1px solid rgba(0,0,0,0.5);
 }
 
@@ -1124,74 +1135,128 @@ position: relative;
     height: 320px;
 width: 270px;
   }
-
-  
- /*  .tour__link img{
-    height: 320px;
-width: 270px;
-  } */
  
 
 /* Countries */
 
 
-.container-fluid {
-}
-.countries {
-   /*  position: relative;
-    min-height: 100vh; */
+.countries.container-fluid {
+   padding: 0;
     padding-top: 110px;
 }
-.country__info {
-    margin-left: 15%;
-    width: 85%;
-    height: auto;
-    display: flex;
+.country__info.row {
+    padding-left: 15%;
+    width: 100%;
+   margin: 0;
+   border:1px solid rgba(0, 0, 0, 0.5);
+}
+
+.country__info{
     flex-direction: column;
+    row-gap: 25px;
+}
+
+.countries {
+
 }
 .country__name {
+    font-size: 2em;
+    letter-spacing: 5px;
+    font-weight: 900;
 }
 .country__title__image {
 }
-.country__basic__info {
+.country__basic__info__list {
+    display: flex;
+    align-items:center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border:1px solid rgba(0, 0, 0, 0.5);
+
 }
-.places__of__interest {
+.country__basic__info__title{
 }
-.place__of__interest {
+
+.country__basic__info__item {
+    flex: 1 1 50%;
+}
+.country__basic__info__item p{
+    letter-spacing: 2px;
+    font-weight: 500;
+} 
+
+
+.places__of__interest__list {
+    border:1px solid rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    flex-direction: row;
+}
+.place__of__interest__item {
+    flex: 1 1 100%;
+    border:1px solid rgba(0, 0, 0, 0.5);
+
+}
+.place__of__interest__content {
+}
+.place__of__interest__descr {
+}
+.place__of__interest__image {
 }
 .short__history {
+    border:1px solid rgba(0, 0, 0, 0.5);
+
 }
+.short__history__title {
+}
+
 .souvenirs__list {
+    border:1px solid rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    flex-direction: row;
+
+}
+.souvenir__item {
+    flex: 1 1 100%;
+    border:1px solid rgba(0, 0, 0, 0.5);
 }
 .souvenir {
 }
-.our__tour__links__list {
+.country__tours__list {
+    border:1px solid rgba(0, 0, 0, 0.5);
+    display: flex;
+    gap: 15px;
+    flex-direction: column;
 }
-.our__tour__item {
+.country__tour__item {
+    flex: 1 1 100%;
+    border:1px solid rgba(0, 0, 0, 0.5);
 }
-.our__tour__item__link {
+.country__tour__link {
+    color:rgba(255, 255, 255, 1);
 }
-.countries__cards__list {
-}
-.side__bar {
+.side__bar.row {
     position: absolute;
     width: 15%;
     left: 0;
+    top: 100px;
+    margin: 0;
 }
-.countries__cards__list__title {
+.countries__cards__list {
+    padding: 15px;
 }
-.countries__cards__list__item {
+.countries__cards__title {
 }
-.country__card__name {
+.countries__cards__item {
 }
 .country__card__link {
-    color:rgba(0,0,0,1);
-    
+    color:rgba(255, 255, 255, 1);
+    letter-spacing: 1px;
+    text-decoration: none;
 }
-.country__card__title__image {
-}
-
-
 /* FOOTER */
 .footer.row{
     position: relative;
@@ -1304,9 +1369,8 @@ width: 270px;
 
 }
 
-input[type="email"]/* ,
-input[type="password"] */ {
-        border:1px solid rgba(0,0,0,0.2);
+input[type="email"]{
+        border:2px solid rgba(0,0,0,0.2);
         flex:1 1 auto;
         height: 24px;
         max-width: 200px;
@@ -1318,15 +1382,15 @@ input[type="password"] */ {
         text-shadow: 0px 1px 1px rgba(0, 0, 0, 1);
     }
 input[type="submit"] {
-    border:3px solid rgba(231, 220, 74, 1);
+    border:2px solid rgba(231, 220, 74, 1);
     background-color:rgba(0,0,0, 1);
     padding: 3px;
     color:rgba(255,255,255, 1);
-    width: 150px;
+    width: 130px;
     height: auto;
     text-transform: uppercase;
     letter-spacing: 2px;
-    border-radius:15px/15px;
+    border-radius:10px/10px;
     font-size: 0.8em;
     margin: 0px auto;
     vertical-align: middle;
